@@ -3,9 +3,6 @@
  * ZenMagick - Extensions for zen-cart
  * Copyright (C) 2006-2008 ZenMagick
  *
- * Portions Copyright (c) 2003 The zen-cart developers
- * Portions Copyright (c) 2003 osCommerce
- *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or (at
@@ -140,6 +137,7 @@ class ZMValidator extends ZMObject {
      * @return array A name/value map.
      */
     protected function obj2map($obj, $set) {
+        //XXX: use beans?
         $prefixList = array('get', 'is', 'has');
 
         $map = array();
