@@ -153,8 +153,8 @@ class ZMUpdateSubscriptionsCronJob implements ZMCronJob {
 
         // do products by using zen-cart's order class to include all stock taking, etc
         // some requirements first..
-        ZMLoader::resolveZCClass('order');
-        ZMLoader::resolveZCClass('order_total');
+        ZMTools::resolveZCClass('order');
+        ZMTools::resolveZCClass('order_total');
         global $order_total_modules;
         $order_total_modules = new order_total();
 
